bitwarden_rs/06-bitwarden-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app: bitwarden
    type: statefulset
spec:
  serviceName: "bitwarden"
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
      type: pod      
  template:
    metadata:
      labels:
        app: bitwarden
        type: pod
    spec:
      containers:
      - name: bitwarden
        image: bitwardenrs/server:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
