bitwarden_rs/05-bitwarden-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app: bitwarden
    type: service
spec:
  selector:
    app: bitwarden
    type: pod
  ports:
    - port: 80
      name: bitwarden
