bitwarden_rs/07-bitwarden-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
  namespace: bitwarden
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
      - "bitwarden.domain.tld"
    secretName: "bitwarden-tls"
  rules:
  - host: "bitwarden.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "bitwarden"
            port:
              number: 80
